; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_reconnect_thread.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_reconnect_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_output = type { i32, i32, i32, i32, i32 }

@ETIMEDOUT = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @reconnect_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @reconnect_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.obs_output*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.obs_output*
  store %struct.obs_output* %6, %struct.obs_output** %3, align 8
  %7 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %8 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = mul nsw i32 %9, 1000
  %11 = sext i32 %10 to i64
  store i64 %11, i64* %4, align 8
  %12 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %13 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %12, i32 0, i32 1
  store i32 1, i32* %13, align 4
  %14 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %15 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %14, i32 0, i32 4
  %16 = load i32, i32* %15, align 4
  %17 = load i64, i64* %4, align 8
  %18 = call i64 @os_event_timedwait(i32 %16, i64 %17)
  %19 = load i64, i64* @ETIMEDOUT, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %1
  %22 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %23 = call i32 @obs_output_actual_start(%struct.obs_output* %22)
  br label %24

24:                                               ; preds = %21, %1
  %25 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %26 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %25, i32 0, i32 4
  %27 = load i32, i32* %26, align 4
  %28 = call i64 @os_event_try(i32 %27)
  %29 = load i64, i64* @EAGAIN, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %24
  %32 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %33 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %32, i32 0, i32 3
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @pthread_detach(i32 %34)
  br label %40

36:                                               ; preds = %24
  %37 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %38 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %37, i32 0, i32 2
  %39 = call i32 @os_atomic_set_bool(i32* %38, i32 0)
  br label %40

40:                                               ; preds = %36, %31
  %41 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %42 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %41, i32 0, i32 1
  store i32 0, i32* %42, align 4
  ret i8* null
}

declare dso_local i64 @os_event_timedwait(i32, i64) #1

declare dso_local i32 @obs_output_actual_start(%struct.obs_output*) #1

declare dso_local i64 @os_event_try(i32) #1

declare dso_local i32 @pthread_detach(i32) #1

declare dso_local i32 @os_atomic_set_bool(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
